--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@types/react-native-vector-icons": "^6.4.8",
+    "@types/styled-components": "^5.1.14",
     "axios": "^0.21.4",
     "expo": "~42.0.1",
     "expo-auth-session": "~3.3.1",
@@ -26,7 +28,8 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
